# aiworkflow

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
aiworkflow/: __init__.py  agent_adapter.py  agent_pack.py  cli.py  config.py  context.py  contracts.py  errors.py  graph.py  ingest.py  model_gateway.py  policy.py  projects.py  prompt.py  review.py  run_store.py  search.py  state.py  verify.py  workflow.py
config/: workflow.example.yaml
docs/: README.md  arch-review.md  architecture.md  core-principles.md  knowledge-index.md  modules.md  project-onboarding.md  roadmap.md  workflow.md
prompts/: review.md  system.md
prompts/tasks/: crash_fix.md  feature.md  general.md  performance.md  refactor.md  review.md
skills/general/: README.md
tests/: test_agent_adapter.py  test_agent_pack.py  test_agent_profiles.py  test_cli_runs.py  test_context.py  test_contracts.py  test_ingest.py  test_projects.py  test_run_store.py  test_search.py  test_verify.py  test_workflow.py
