[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiworkflow"
version = "0.1.0"
description = "CLI-first AI Workflow / Agent OS MVP with Context Pack generation, Neo4j retrieval, and controlled verification hints."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AI Workflow Team" }]
dependencies = [
  "langgraph>=0.2.0",
  "llama-index>=0.11.0",
  "neo4j>=5.20.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
aiworkflow = "aiworkflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiworkflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
